# RestApiRocket

./: Cargo.toml  README.md
data/: movies.json
src/: bin.rs
src/db/: mod.rs
src/model/: mod.rs
